[WinCairo?] GPU process remains alive even after web process exited https://bugs.webkit.org/show_bug.cgi?id=219321

Reviewed by Don Olmstead.

AuxiliaryProcess::didClose is calling _exit. However, GPUProcess
overrode AuxiliaryProcess::didClose but it did nothing. GPUProcess
doesn't need to override it.

* GPUProcess/GPUProcess.cpp:
(WebKit::GPUProcess::didClose): Deleted.
* GPUProcess/GPUProcess.h:

Canonical link: https://commits.webkit.org/231919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270210 268f45cc-cd09-0410-ab3c-d52691b4dbfc